app/src/main/java/com/example/rentit/core/error/BadRequestException.kt
package com.example.rentit.core.error

class BadRequestException(message: String? = null): Exception(message)